# RayTraceThis

./: .gitignore  README.md
.github/workflows/: ray-trace-this-prod-workflow.yml
docs/Writerside/: r.tree
docs/Writerside/topics/: CPP-Renderer-Setup.md  Deployment.md  Idea.md  RayTraceThis-Angular.md
src/RayTraceThis.Angular/: Dockerfile  README.md  angular.json  package-lock.json  package.json
src/RayTraceThis.Angular/src/: index.html
src/RayTraceThis.Angular/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.service.ts
src/RayTraceThis.Net/: RayTraceThis.Net.sln  docker-compose.yml
src/RayTraceThis.Net/RayTraceThis.Net.Core/: RayTraceThis.Net.Core.csproj  RayTraceThis.Net.Core.csproj.DotSettings
src/RayTraceThis.Net/RayTraceThis.Net.Core/Exchange/Requests/: Command.cs  IRequestBase.cs  Query.cs
src/RayTraceThis.Net/RayTraceThis.Net.Core/Exchange/Responses/: Error.cs  Result.cs
src/RayTraceThis.Net/RayTraceThis.Net.Identity/: RayTraceThis.Net.Identity.csproj
src/RayTraceThis.Net/RayTraceThis.Net.Identity/Users/: UsersModule.cs
src/RayTraceThis.Net/RayTraceThis.Net.Identity/Users/GetUsers/: GetUsersQuery.cs  GetUsersQueryHandler.cs  GetUsersRequest.cs  UsersListModel.cs
src/RayTraceThis.Net/RayTraceThis.Net.WebApi/: AppSettings.cs  DependencyInjection.cs  Dockerfile  Program.cs  RayTraceThis.Net.WebApi.csproj  RayTraceThis.Net.WebApi.http
src/RayTraceThis.Net/RayTraceThis.Net.WebApi/Properties/: launchSettings.json
src/SMCodesRenderEngine/: CMakeLists.txt  CMakePresets.json  shader_compiler.bat
src/SMCodesRenderEngine/SMCodesRenderEngine/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.h  SMCodesRenderEngine.cpp  SMCodesRenderEngine.h
src/SMCodesRenderEngine/SMCodesRenderEngine/shaders/: hello_triangle_application.frag  hello_triangle_application.frag.spv  hello_triangle_application.vert  hello_triangle_application.vert.spv
